# pyBL

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .readthisdoc.yml  LICENSE  Mfinal_staProp.csv  README.md  README.rst  Runall_main.py  Runme01_Cal_stats.ipynb  Runme01_Cal_stats.py  Runme02_Fitting.ipynb  Runme02_Fitting.py  Runme03_Sampling.ipynb  Runme03_Sampling.py  example_CalStats.py  example_Fitting.py  genindex.html  index.html  main.py  objects.inv  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  search.html  searchindex.js  timeRange.csv  tox.ini
.github/workflows/: deploy-docs.yml  docs.yml  lint.yml  test.yml  tests.yml
02 Output_data/: Theta.csv  sample_stats.csv  weight_test.csv
_sources/developer_guide/: build_the_doc.rst.txt
_sources/pybl_reference/: pybl.utils.rst.txt
config/: default.yaml
developer_guide/: build_the_doc.html  contribute_guideline.html  packaging.html  test_pybl.html
docs/: requirements-doc.txt
docs/source/: conf.py  fitting.rst  index.rst  models.rst  modules.rst  raincell.rst  timeseries.rst  utils.rst
docs/source/developer_guide/: build_the_doc.rst  contribute_guideline.rst  packaging.rst  test_pybl.rst
docs/source/pybl_reference/: index.rst  modules.rst  pybl.models.rst  pybl.raincell.rst  pybl.rst  pybl.timeseries.rst
docs/source/user_guide/: configuring.rst  installation.rst
example/: example_CalStats.py  example_Fitting.py  example_Sampling.py
examples/: 5Y_1_Theta.csv  configuration.py  data_processing.py  experiment.py  fitting.py  sampling.py
examples/data/: elmdon.csv
examples/quick_start/: quick_start.ipynb
fitting/: fitting.py  objectiveFunction.py  solver.py
legacy/: Mfinal_staProp.csv  README.md  Runall_main.py  Runme01_Cal_stats.py  Runme02_Fitting.py  Runme03_Sampling.py  blrprx_stats.py  compare_obj.py
legacy/01 Input_data/: timeRange.csv
legacy/02 Output_data/: Theta.csv  result.csv  sample_stats.csv  staProp_test.csv
legacy/config/: default.yaml
model/: BLRPRx.py
pybl/: __init__.py
pybl/models/: basemodel.py  blrprx.py
pybl/raincell/: __init__.py  rcimodel.py  storm.py
pybl/timeseries/: __init__.py  indexsnapshot.py
pybl/utils/: generate.py  statistics.py  timeseries.py
pybl_reference/: index.html  modules.html  pybl.html  pybl.models.html  pybl.raincell.html  pybl.timeseries.html  pybl.utils.html
sampling/: gsl_in_python.py  mergeCells.py  sampling.py  storm.py  validation.py
src/pyBL/dataclasses/: __init__.py  storm.py
src/pyBL/fitting/: fitter.py
src/pyBL/models/: __init__.py  basemodel.py  blrprx.py
src/pyBL/raincell/: __init__.py  cell.py  rcimodel.py
src/pyBL/timeseries/: __init__.py  intensity_mrle.py  intensity_rle.py
src/pyBL/utils/: timeseries.py
src/pybl/fitting/: __init__.py  fitter.py
src/pybl/models/: basemodel.py  blrprx.py
src/pybl/raincell/: __init__.py  rcimodel.py
src/pybl/timeseries/: intensity_mrle.py
src/pybl/utils/: timeseries.py
tests/: conftest.py  test_IntensitySnapshot.py  test_IntensitySnapshot_core.py  test_data_loading.py  test_fuzzy_real_input.py  test_intensityRLE.py  test_statistic_and_weight.py
tests/data/: bochum_stats.csv  bochum_stats.npy  bochum_weight.csv  bochum_weight.npy  elmdon_stats.csv  elmdon_stats.npy  elmdon_weight.csv  elmdon_weight.npy
user_guide/: configuring.html  installation.html
utils/: stats_calculation.py  utils.py
