[project]
name = "pyBL"
version = "0.0.1"
description = "Python implementation of the Bartlett-Lewis based model for rainfall simulation"
authors = [
    {name = "Wei Chi Ling", email = "kilinw1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "mypy>=0.910",
    "tox>=3.20.0",
    "pre-commit>=2.9.0",
]

[tool.pytest.ini_options]
# Generate report for codecov. Need to install pytest-cov.
addopts = ["--cov=pyBL"]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
select = ["F", "E", "W", "I001"]

[tool.ruff.per-file-ignores] 
    "__init__.py"= ["F401", "F403"]

[tool.mypy]
mypy_path = ["src"]
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true


[tool.setuptools.package-data]
pyBL = ["py.typed"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"