[tool.poetry]
name = "pyBLRP"
version = "1.0.0"
description = "Python implementation of the Bartlett-Lewis based model for rainfall simulation"
authors = ["Kilin <jack233924@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pybl", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
numba = "^0.58.1"
pandas = "^2.1.3"
numpy = "^1.20.2"
scipy = "^1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
tox = "^4.11.3"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
pandas-stubs = "^2.1.1.230928"
black = "^23.11.0"
ipykernel = "^6.29.4"

[tool.pytest.ini_options]
# Generate report for codecov. Need to install pytest-cov.
addopts = ["--cov=pybl"]
testpaths = ["tests"]

[tool.ruff]
src = ["pybl"]
lint.ignore = ["E501"]
lint.select = ["F", "E", "W", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
mypy_path = ["pybl"]
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true

[tool.setuptools.package-data]
pybl = ["py.typed"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
